--- a/src/app/(frontend)/components/Footer.css
+++ b/src/app/(frontend)/components/Footer.css
@@ -2,4 +2,7 @@ footer {
     background-color: black;
     width: 100%;
     padding: 40px 0;
+    position: fixed;
+    bottom: 0;
+    margin-top: 1em;
 }
