feat: "Add Compos.css and add PageBlock.ts"

--- a/src/app/(frontend)/styles.css
+++ b/src/app/(frontend)/styles.css
@@ -62,3 +62,10 @@ body {
   display: grid;
   place-content: center;
 }
+
+.page {
+  background-color: brown;
+  display: grid;
+  grid-template-columns: 355px 355px;
+  gap: 1em;
+}
